--- a/cas-client/pom.xml
+++ b/cas-client/pom.xml
@@ -45,6 +45,19 @@
 			<artifactId>portlet</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<!-- This webapp uses jsp so we need the jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- standard.jar -->
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
