Moved filters into its own project that can be shared between multiple webapps

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
 	<modules>
 		<module>cas-server</module>
+		<module>cas-gentics-filter</module>
 		<module>cas-client-gpn</module>
 		<module>cas-client</module>
 	</modules>
