--- a/cas-client-gpn/pom.xml
+++ b/cas-client-gpn/pom.xml
@@ -24,6 +24,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>${parent.groupId}</groupId>
+			<artifactId>cas-gentics-filter</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.jasig.cas</groupId>
 			<artifactId>cas-server-core</artifactId>
 			<version>3.3.3</version>
@@ -85,25 +91,6 @@
 					<target>1.6</target>
 					<maxmem>1024m</maxmem>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>src/main/filter</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
