--- a/cas-server/pom.xml
+++ b/cas-server/pom.xml
@@ -69,6 +69,9 @@
 					<webResources>
 						<resource>
 							<directory>${cas.config}</directory>
+							<includes>
+								<include>**/*</include>
+							</includes>
 						</resource>
 					</webResources>
 				</configuration>
