--- a/cas-server/pom.xml
+++ b/cas-server/pom.xml
@@ -21,26 +21,41 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
 		<cas.config>config/gtx</cas.config>
+		<cas.version>3.3.3</cas.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.jasig.cas</groupId>
 			<artifactId>cas-server-webapp</artifactId>
-			<version>3.3.3</version>
+			<version>${cas.version}</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>org.jasig.cas</groupId>
 			<artifactId>cas-server-core</artifactId>
-			<version>3.3.3</version>
+			<version>${cas.version}</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.jasig.cas</groupId>
 			<artifactId>cas-server-support-jdbc</artifactId>
-			<version>3.3.3</version>
+			<version>${cas.version}</version>
 			<type>jar</type>
+		</dependency>
+		
+		<!-- Provided dependencies -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.4.public_draft</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.0.public_draft</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
