--- a/cas-gentics-filter/pom.xml
+++ b/cas-gentics-filter/pom.xml
@@ -27,7 +27,7 @@
 			<artifactId>cas-client-core</artifactId>
 			<version>${jasig.cas.client.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -40,16 +40,26 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<artifactId>node-lib</artifactId>
-			<groupId>com.gentics</groupId>
-			<version>1.5.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<artifactId>portalnode-lib</artifactId>
 			<groupId>com.gentics</groupId>
 			<version>4.1.0-dev-SNAPSHOT</version>
 		</dependency>
-		
+
 	</dependencies>
+
+
+	<repositories>
+		<repository>
+			<id>archiva.lan.internal</id>
+			<name>Archiva LAN Internal Repository</name>
+			<url>http://archiva-mirror.office:8080/archiva/repository/internal</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 </project>
