--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>gentics-sso-package</artifactId>
@@ -27,16 +28,17 @@
 		<jasig.cas.client.version>3.1.4</jasig.cas.client.version>
 	</properties>
 
+
 	<distributionManagement>
 		<repository>
-			<id>archiva.com.gentics.internal</id>
-			<name>Gentics Internal Repository</name>
-			<url>http://archiva.gentics.com:8081/archiva/repository/com.gentics.internal</url>
+			<id>archiva.lan.testing</id>
+			<name>Gentics Releases Repository</name>
+			<url>http://archiva-mirror.office:8080/archiva/repository/testing-stage</url>
 		</repository>
 		<snapshotRepository>
-			<id>archiva.com.gentics.internal</id>
-			<name>Gentics Internal Repository</name>
-			<url>http://archiva.gentics.com:8081/archiva/repository/com.gentics.internal</url>
+			<id>archiva.lan.snapshots</id>
+			<name>Gentics Snapshots Repository</name>
+			<url>http://archiva-mirror.office:8080/archiva/repository/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
