Update maven repo information

--- a/cas-gentics-filter/pom.xml
+++ b/cas-gentics-filter/pom.xml
@@ -27,7 +27,6 @@
 			<artifactId>cas-client-core</artifactId>
 			<version>${jasig.cas.client.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -35,31 +34,15 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>portlet</groupId>
-			<artifactId>portlet</artifactId>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
 			<version>2.0</version>
 		</dependency>
 		<dependency>
 			<artifactId>portalnode-lib</artifactId>
 			<groupId>com.gentics</groupId>
-			<version>4.1.0-dev-SNAPSHOT</version>
+			<version>${portalnode.version}</version>
+			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
-
-
-	<repositories>
-		<repository>
-			<id>archiva.lan.internal</id>
-			<name>Archiva LAN Internal Repository</name>
-			<url>http://archiva-mirror.office:8080/archiva/repository/internal</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
 </project>
