--- a/cas-client-gpn-webapp/pom.xml
+++ b/cas-client-gpn-webapp/pom.xml
@@ -24,7 +24,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>${parent.groupId}</groupId>
+			<groupId>com.gentics</groupId>
 			<artifactId>cas-gentics-filter</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
@@ -42,8 +42,8 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
-			<groupId>portlet</groupId>
-			<artifactId>portlet</artifactId>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
 			<version>2.0</version>
 		</dependency>
 		<dependency>
@@ -52,14 +52,9 @@
 			<version>${jasig.cas.client.version}</version>
 		</dependency>
 		<dependency>
-			<artifactId>node-lib</artifactId>
 			<groupId>com.gentics</groupId>
-			<version>1.5.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<artifactId>portalnode-lib</artifactId>
-			<groupId>com.gentics</groupId>
-			<version>4.1.0-dev-SNAPSHOT</version>
+			<version>${portalnode.version}</version>
 		</dependency>
 		<!-- This webapp uses jsp so we need the jstl -->
 		<dependency>
@@ -94,43 +89,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<repositories>
-
-		<repository>
-			<id>archiva.com.gentics.internal</id>
-			<name>Archiva Managed Internal Repository</name>
-			<url>http://archiva.gentics.com:8081/archiva/repository/com.gentics.internal/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-
-
-		<repository>
-			<id>archiva.com.gentics.public</id>
-			<name>Archiva Managed Public Repository</name>
-			<url>http://archiva.gentics.com:8081/archiva/repository/com.gentics.public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-
-		<repository>
-			<id>com.gentics.public_snapshots</id>
-			<name>Archiva Managed Public Repository</name>
-			<url>http://archiva.gentics.com:8081/archiva/repository/com.gentics.public_snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-
-	</repositories>
-
 </project>
