--- a/cas-client-simple-webapp/pom.xml
+++ b/cas-client-simple-webapp/pom.xml
@@ -24,7 +24,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>com.gentics</groupId>
 			<artifactId>cas-gentics-filter</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
@@ -47,9 +47,9 @@
 			<version>2.0.public_draft</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>portlet</groupId>
-			<artifactId>portlet</artifactId>
+				<dependency>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
 			<version>2.0</version>
 			<scope>provided</scope>
 		</dependency>
