--- a/cas-gentics-filter/pom.xml
+++ b/cas-gentics-filter/pom.xml
@@ -37,6 +37,7 @@
 			<groupId>javax.portlet</groupId>
 			<artifactId>portlet-api</artifactId>
 			<version>2.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<artifactId>portalnode-lib</artifactId>
